* NEW: Add container div around single blog entry "#wikitext .blogit-post". (for ajax blog edit) **Needs to include edit button** * new: Include jquery and blix.js as part of $HTMLHeaderFmt. * new: Add .blogit-post-summary container around multi-entry blogs; ensure .blogit-post-summary is added to shared same styling as .blogit-post. * BUG: Skin XL should not include the variable LastModified! * bug: Multiple A in sidebar splits to new line (ajax edit icon for blogit). * bug: Ensure use of jquery doesn't conflict with other js libraries. * bug: Removed quotes around bi_encode parameters. * chg: Increase line height in sidebar; marins in sidebar; increase width of editlink to ensure icon is not truncated.

--- a/layout.css
+++ b/layout.css
@@ -136,6 +136,7 @@ img.center, img.aligncenter {
 }
 #header .sitetitle {
 	padding: 18px 15px 10px 0;
+	line-height: 1em;
 }
 #header .sitetitle a{float:left; font-size:30px; font-weight:bold; display: block}
 #header .sitetag {float: left; clear: left}
@@ -286,7 +287,7 @@ img.center, img.aligncenter {
 	right:14px;
 	top: 2px;
 	height:14px;
-	width:14px;
+	width:35px;
 	line-height: 1.25em;
 }
 
